// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<About /> should render <About /> 1`] = `
<section
  class="sc-bdnxRM cnQhyl"
>
  <div
    class="sc-gtsrHT givMVg"
  >
    <h3
      class="sc-jSFjdj eNMYbP"
    >
      Title here
    </h3>
    <div
      class="sc-dlnjwi coeqwS"
    >
      <div
        class="sc-hKFxyN YnZmL"
      />
    </div>
    <p
      class="sc-gKAaRy gFSBBD"
    >
      Some description
    </p>
  </div>
</section>
`;

exports[`<About /> should render <About /> with title hidden to user 1`] = `
<section
  class="sc-bdnxRM cnQhyl"
>
  <div
    class="sc-gtsrHT givMVg"
  />
</section>
`;
